# AI-Agent-news

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  run.py
app/: config.py  database.py  logger.py  models.py  utils.py
app/bot/: handlers.py  keyboards.py  main_bot.py
app/core/: deduplicator.py  processor.py
app/listeners/: telethon_listener.py
app/services/: gemini_service.py  image_service.py  telegram_publisher.py
bot/: __init__.py  main_bot.py
core/: __init__.py  processor.py  publisher.py
data/: newsagent.db
db/: __init__.py  database.py  models.py
parser/: __init__.py  listener.py
scripts/: smoke_test.py
session/: parser_session.session  parser_session.session-journal
